--- a/libs/domain/add-item/src/lib/add-item/add-item.page.html
+++ b/libs/domain/add-item/src/lib/add-item/add-item.page.html
@@ -1,1 +1,3 @@
-<ab-add-item-form></ab-add-item-form>
+<ab-ui-page [headerProps]="{caption:'Add a new Item', icon: '➕', link:''}">
+  <ab-add-item-form class="main"></ab-add-item-form>
+</ab-ui-page>
