--- a/libs/domain/home/src/lib/home.page.html
+++ b/libs/domain/home/src/lib/home.page.html
@@ -1,7 +1,16 @@
-<ab-ui-page-header [props]="{caption:'Categorías'}"></ab-ui-page-header>
-<ab-home-categories
-                    *ngIf="categories$ | async as categories"
-                    [categories]="categories">
-</ab-home-categories>
+<!-- <ab-ui-page-header [props]="{caption:'Categorías'}"></ab-ui-page-header>
+<ab-home-categories class="main"
+                      *ngIf="categories$ | async as categories"
+                      [categories]="categories">
+  </ab-home-categories>
 <ab-ui-loading *ngIf="loading"></ab-ui-loading>
 <ab-ui-error *ngIf="error" [props]="error"></ab-ui-error>
+-->
+<ab-ui-page [headerProps]="{caption:'Categories'}">
+  <ab-home-categories
+                      *ngIf="categories$ | async as categories"
+                      [categories]="categories">
+  </ab-home-categories>
+  <ab-ui-loading *ngIf="loading"></ab-ui-loading>
+</ab-ui-page>
+<ab-ui-error class="error" *ngIf="error" [props]="error"></ab-ui-error>
